[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Dialogue/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://Dev Folders/Andrew/AndrewTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/TextPrinter.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.12549, 0.12549, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.298039, 0, 0, 1 )

[node name="DialogueBox" type="MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 1916.0
margin_bottom = 1076.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 540.0
margin_right = 4.0
margin_bottom = 540.0
size_flags_horizontal = 2
size_flags_vertical = 4
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 1916.0
margin_bottom = 1076.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Offset" type="ColorRect" parent="HBoxContainer"]
margin_top = 408.0
margin_right = 256.0
margin_bottom = 664.0
rect_min_size = Vector2( 256, 256 )
size_flags_horizontal = 0
size_flags_vertical = 4
color = Color( 1, 0, 0.796078, 1 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 260.0
margin_right = 1912.0
margin_bottom = 1072.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1648.0
margin_bottom = 1068.0

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1640.0
margin_bottom = 1060.0
custom_styles/panel = SubResource( 2 )

[node name="BlurbDisplay" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1648.0
margin_bottom = 1068.0
size_flags_horizontal = 3

[node name="Blurb" type="RichTextLabel" parent="HBoxContainer/MarginContainer/BlurbDisplay"]
margin_right = 1574.0
margin_bottom = 1064.0
size_flags_horizontal = 3

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer/MarginContainer/BlurbDisplay"]
margin_left = 1578.0
margin_top = 356.0
margin_right = 1644.0
margin_bottom = 708.0
size_flags_vertical = 4

[node name="Navigate" type="VBoxContainer" parent="HBoxContainer/MarginContainer/BlurbDisplay/Buttons"]
margin_right = 63.0
margin_bottom = 174.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="NavUp" type="Button" parent="HBoxContainer/MarginContainer/BlurbDisplay/Buttons/Navigate"]
margin_right = 63.0
margin_bottom = 85.0
text = "/\\"

[node name="NavDown" type="Button" parent="HBoxContainer/MarginContainer/BlurbDisplay/Buttons/Navigate"]
margin_top = 89.0
margin_right = 63.0
margin_bottom = 174.0
text = "\\/"

[node name="Play" type="Button" parent="HBoxContainer/MarginContainer/BlurbDisplay/Buttons"]
margin_top = 178.0
margin_right = 66.0
margin_bottom = 263.0
text = "|>"

[node name="Next" type="Button" parent="HBoxContainer/MarginContainer/BlurbDisplay/Buttons"]
margin_top = 267.0
margin_right = 66.0
margin_bottom = 352.0
text = "->"

[node name="TextPrinter" type="Node" parent="."]
script = ExtResource( 3 )
TextBoxPath = NodePath("../HBoxContainer/MarginContainer/BlurbDisplay/Blurb")

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
